# MINA

./: README.md  huong_dan_chay_do_an.md  start.ps1  toolchain.local.ps1
backend/: .env.example  _test_import.py  _test_scan.py  _test_ws.py  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/agents/: __init__.py  active_recon.py  attach_provenance.py  company_intel.py  correlator.py  credentials_access.py  director.py  extraction_helpers.py  extractors.py  impact_analyst.py  infra_network_intel.py  karma_passive.py  normalizer.py  osint_agent.py  osint_deep_dive.py  passive_recon.py  people_intel.py  reporter.py  root_domain_discovery.py  service_surface.py  subdomain_intel.py  table_composer.py  web_surface_agent.py
backend/core/: canonicalization.py  collector_registry.py  config.py  evidence_store.py  graph.py  identity.py  impact_model.py  logger.py  models.py  planner.py  preflight.py  provenance.py  resilience.py  runtime_emit.py  scope.py  session.py  state.py  tool_health.py  validators.py
backend/export/: multi_format.py  schemas.py  table_exporter.py
backend/nodes/: __init__.py  gates.py
backend/prompts/: director_prompts.py  normalize_prompts.py  recon_prompts.py  report_prompts.py
backend/tests/: conftest.py  test_identity.py  test_integration_scan_flow.py  test_planner.py  test_pydantic_safety.py  test_report_tools.py  test_runtime_emit.py  test_toggle_wiring.py  test_update_v3.py  test_v5_requirements.py  test_web_tools.py
backend/tools/: active_tools.py  cert_tools.py  command_builders.py  company_tools.py  dns_tools.py  (+11 more)
(+37 files in other folders)
