[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mina-backend"
version = "2.0.0"
requires-python = ">=3.11"
description = "MINA — Multi-Intelligence Network Agent backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
]
markers = [
  "unit: fast unit tests (no network)",
  "integration: integration tests (may require network/APIs)",
  "slow: tests that take > 10s",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]
exclude = ["__pycache__", ".venv", "venv", "build", "dist"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["tests/", "venv/", ".venv/"]
